--- a/SimRa/Base.lproj/Main.storyboard
+++ b/SimRa/Base.lproj/Main.storyboard
@@ -1243,36 +1243,26 @@ from www.flaticon.com</string>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="162" id="b7O-Rj-Hc4">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="162" id="b7O-Rj-Hc4">
                                         <rect key="frame" x="0.0" y="821.50000034679067" width="320" height="162"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="b7O-Rj-Hc4" id="cz8-tj-hus">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Slots" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iFd-cr-Crk">
-                                                    <rect key="frame" x="20" y="20" width="280" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="8Y7-SO-O12"/>
-                                                    </constraints>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Time Slots" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iFd-cr-Crk">
+                                                    <rect key="frame" x="16" y="12" width="288" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R0t-sr-fR7">
-                                                    <rect key="frame" x="20" y="49" width="280" height="93"/>
+                                                <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="R0t-sr-fR7">
+                                                    <rect key="frame" x="16" y="41" width="288" height="101"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" red="0.2470588235" green="0.44705882349999998" blue="0.70980392160000005" alpha="1" colorSpace="calibratedRGB"/>
                                                 </view>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="iFd-cr-Crk" secondAttribute="trailing" constant="20" symbolic="YES" id="1V0-By-oHU"/>
-                                                <constraint firstItem="R0t-sr-fR7" firstAttribute="top" secondItem="iFd-cr-Crk" secondAttribute="bottom" constant="8" symbolic="YES" id="Pg1-aJ-SIq"/>
-                                                <constraint firstAttribute="trailing" secondItem="R0t-sr-fR7" secondAttribute="trailing" constant="20" symbolic="YES" id="b13-Bl-Ke0"/>
-                                                <constraint firstItem="iFd-cr-Crk" firstAttribute="top" secondItem="cz8-tj-hus" secondAttribute="top" constant="20" symbolic="YES" id="cH5-9V-uKL"/>
-                                                <constraint firstAttribute="bottom" secondItem="R0t-sr-fR7" secondAttribute="bottom" constant="20" symbolic="YES" id="hOL-Et-8xz"/>
-                                                <constraint firstItem="R0t-sr-fR7" firstAttribute="leading" secondItem="cz8-tj-hus" secondAttribute="leading" constant="20" symbolic="YES" id="mvq-0a-R1t"/>
-                                                <constraint firstItem="iFd-cr-Crk" firstAttribute="leading" secondItem="cz8-tj-hus" secondAttribute="leading" constant="20" symbolic="YES" id="uqf-4o-7Lx"/>
-                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
